[package]
name = "test_n0_dasl"
version = "0.1.0"
edition = "2024"

[dependencies]
dasl = { git = "https://github.com/n0-computer/dasl.git", branch = "main" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
ciborium = "0.2.2"

[build-dependencies]
built = { version = "0.7", features = ["dependency-tree"] }
