[package]
name = "test_serde_ipld_dagcbor"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_ipld_dagcbor = "0.6.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
ciborium = "0.2.2"
ipld-core = "0.4.2"

[build-dependencies]
built = { version = "0.7", features = ["dependency-tree"] }
